--- a/po/nl_NL/batch.po
+++ b/po/nl_NL/batch.po
@@ -14,9 +14,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-14 00:16+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -39,6 +39,10 @@ msgstr "Weergeven/Transacties aan batch toevoegen"
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
 msgstr "Batch opnieuw openen"
+
+#: CRM/Batch/BAO/Batch.php
+msgid "Delete Batch"
+msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -65,12 +69,52 @@ msgid "No export format selected."
 msgstr "Geen exportopmaak geselecteerd."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Exported Date"
-msgstr "Tijd van exporteren"
+msgid "Batch ID"
+msgstr "Batchnummer"
 
-#: CRM/Batch/Form/Batch.php
-msgid "Number of items"
-msgstr "Aantal items"
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Description"
+msgstr "Batchbeschrijving"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created By"
+msgstr "Batch gemaakt door"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created Date"
+msgstr "Batch gemaakt op"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified By"
+msgstr "Batch gewijzigd door"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified Date"
+msgstr "Batch gewijzigd op"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Smart Group"
+msgstr "Smartgroep-batch"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Total"
+msgstr "Batch totaal"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Number of Items"
+msgstr "Aantal items in batch"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Payment Instrument"
+msgstr "Batchbetaalmethode"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Exported Date"
+msgstr "Batch geëxporteerd op"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Data"
+msgstr "Batchgegevens"
 
 #: CRM/Batch/Form/Batch.php
 msgid "Batch Deleted"
@@ -89,6 +133,10 @@ msgid "Batch Data Entry for Memberships"
 msgstr "Batchgewijze gegevensinvoer van lidmaatschappen"
 
 #: CRM/Batch/Form/Entry.php
+msgid "Batch Data Entry for Pledge Payments"
+msgstr "Batchgewijze gegevensinvoer voor betalingen van toezeggingen"
+
+#: CRM/Batch/Form/Entry.php
 msgid "Ignore Mismatch & Process the Batch?"
 msgstr "Afwijking toestaan & batch verwerken?"
 
@@ -97,16 +145,16 @@ msgid "Validate & Process the Batch"
 msgstr "Batch valideren & verwerken"
 
 #: CRM/Batch/Form/Entry.php
-msgid "Some fields have been excluded."
-msgstr "Enkele velden zijn uitgesloten."
-
-#: CRM/Batch/Form/Entry.php
 msgid "Soft credit amount should not be greater than the total amount"
 msgstr "Het bedrag van het zacht krediet kan niet hoger zijn dan het totaalbedrag"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Membership type is a required field."
 msgstr "Lidmaatschapstype is een verplicht veld."
+
+#: CRM/Batch/Form/Entry.php
+msgid "You can not record two payments for the same pledge in a single batch."
+msgstr "U kunt niet in één batch twee betalingen vastleggen voor dezelfde toezegging."
 
 #: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
 msgid ""
@@ -155,6 +203,10 @@ msgstr "Verwacht totaalbedrag"
 msgid "Total amount entered"
 msgstr "Som ingevoerde bedragen"
 
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid "Open Pledges (Due Date - Amount)"
+msgstr "Openstaande toezeggingen (Vervaldatum - Bedrag)"
+
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "Data Entry Batches"
 msgstr "Gegevensinvoerbatches"
@@ -176,65 +228,36 @@ msgid "No Data Entry Batches have been created for this site."
 msgstr "Er zijn geen gegeveninvoerbatches gemaakt voor deze site."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Batch ID"
-msgstr "Batchnummer"
+msgid "Batch Payment Method"
+msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Title"
-msgstr "Batchnaam"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch ID"
+msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Description"
-msgstr "Batchbeschrijving"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created By"
-msgstr "Batch gemaakt door"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created Date"
-msgstr "Batch gemaakt op"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified By"
-msgstr "Batch gewijzigd door"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified Date"
-msgstr "Batch gewijzigd op"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Smart Group"
-msgstr "Smartgroep-batch"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Total"
-msgstr "Batch totaal"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Number of Items"
-msgstr "Aantal items in batch"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Payment Instrument"
-msgstr "Batchbetaalmethode"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Exported Date"
-msgstr "Batch geëxporteerd op"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Data"
-msgstr "Batchgegevens"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch Table"
+msgstr ""
 
 #: CRM/Batch/Form/Entry.php
-msgid "Batch Data Entry for Pledge Payments"
-msgstr "Batchgewijze gegevensinvoer voor betalingen van toezeggingen"
-
-#: CRM/Batch/Form/Entry.php
-msgid "You can not record two payments for the same pledge in a single batch."
-msgstr "U kunt niet in één batch twee betalingen vastleggen voor dezelfde toezegging."
+msgid ""
+"File or Autocomplete-Select type field(s) in the selected profile are not "
+"supported for Update multiple records."
+msgstr ""
 
 #: templates/CRM/Batch/Form/Entry.tpl
-msgid "Open Pledges (Due Date - Amount)"
-msgstr "Openstaande toezeggingen (Vervaldatum - Bedrag)"
+msgid ""
+"Click Validate & Process below when you've entered all items for the batch. "
+"You can also Save & Continue Later at any time."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Add, remove or change the order of columns by editing the corresponding <a "
+"href=\"%1\" target=\"_blank\">Bulk Entry profile</a>."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Custom fields and a Personal Campaign Page field can be added if needed."
+msgstr ""
