--- a/po/nl_NL/grant.po
+++ b/po/nl_NL/grant.po
@@ -10,9 +10,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-11 03:18+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -39,14 +39,6 @@ msgstr "Einddatum toelage is leeg"
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Decision Date is NULL"
 msgstr "Beslisdatum toelage is leeg"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Type %2 %1"
-msgstr "Toelagetype %2 %1"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Status %2 %1"
-msgstr "Toelagestatus %2 %1"
 
 #: CRM/Grant/BAO/Query.php
 msgid "App. Received Date - From"
@@ -93,10 +85,6 @@ msgid "Grant report received"
 msgstr "Verantwoordingsrapport ontvangen"
 
 #: CRM/Grant/DAO/Grant.php
-msgid "Grant Type Id"
-msgstr "Toelagetypenummer"
-
-#: CRM/Grant/DAO/Grant.php
 msgid "Amount granted"
 msgstr "Toegezegd bedrag"
 
@@ -108,10 +96,6 @@ msgstr "Toelage valuta"
 msgid "Grant Rationale"
 msgstr "Reden voor toelage"
 
-#: CRM/Grant/DAO/Grant.php
-msgid "Grant Status Id"
-msgstr "Toelagestatusnummer"
-
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
 msgstr "Verantwoordingsrapport ontvangen?"
@@ -119,6 +103,10 @@ msgstr "Verantwoordingsrapport ontvangen?"
 #: CRM/Grant/Form/Grant.php
 msgid "Amount Requested<br />(original currency)"
 msgstr "Aangevraagd bedrag<br />(oorspronkelijke valuta)"
+
+#: CRM/Grant/Form/Grant.php
+msgid "Applicant"
+msgstr "Aanvrager"
 
 #: CRM/Grant/Form/Search.php
 msgid "Find Grants"
@@ -129,12 +117,10 @@ msgid "Delete Grants"
 msgstr "Toelagen verwijderen"
 
 #: CRM/Grant/Form/Task/Delete.php
-msgid "Deleted Grant(s): %1"
-msgstr "Verwijderde toelage(n): %1"
-
-#: CRM/Grant/Form/Task/Delete.php CRM/Grant/Form/Task/Update.php
-msgid "Total Selected Grant(s): %1"
-msgstr "Totaal aantal geselecteerde toelagen: %1"
+msgid "%count grant deleted."
+msgid_plural "%count grants deleted."
+msgstr[0] "%count toelage verwijderd."
+msgstr[1] "%count toelagen verwijderd."
 
 #: CRM/Grant/Form/Task/Print.php
 msgid "Print Grant List"
@@ -145,30 +131,46 @@ msgid "Update Grants"
 msgstr "Toelagen bijwerken"
 
 #: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1"
-msgstr "Bijgewerkte toelage(n): %1"
+msgid "Updated Grant(s): %1 (Total Selected: %2)"
+msgstr "Gewijzigde toelage(n): %1 (aantal geselecteerd: %2)"
+
+#: CRM/Grant/Info.php
+msgid "access CiviGrant"
+msgstr "toegang tot CiviGrant"
+
+#: CRM/Grant/Info.php
+msgid "View all grants"
+msgstr "Alle toelagen weergeven"
+
+#: CRM/Grant/Info.php
+msgid "edit grants"
+msgstr "toelagen bewerken"
+
+#: CRM/Grant/Info.php
+msgid "Create and update grants"
+msgstr "Toelagen maken en bijwerken"
+
+#: CRM/Grant/Info.php
+msgid "delete in CiviGrant"
+msgstr "verwijderen in CiviGrant"
+
+#: CRM/Grant/Info.php
+msgid "Delete grants"
+msgstr "Toelagen verwijderen"
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
 msgstr "toelagen"
 
-#: CRM/Grant/Page/Tab.php
-msgid "Grant by"
-msgstr "Toelage door"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/GrantView.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "View Grant"
 msgstr "Toelage weergeven"
 
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "Edit Grant"
 msgstr "Toelage bewerken"
 
 #: CRM/Grant/Selector/Search.php
-msgid "Are you sure you want to delete this grant?"
-msgstr "Weet u zeker dat u deze toelage wilt verwijderen?"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
 msgid "Delete Grant"
 msgstr "Toelage verwijderen"
 
@@ -181,16 +183,8 @@ msgid "Granted"
 msgstr "Toegekend"
 
 #: CRM/Grant/Task.php
-msgid "Print Grants"
-msgstr "Toelagen afdrukken"
-
-#: CRM/Grant/Task.php
 msgid "Export Grants"
 msgstr "Toelagen exporteren"
-
-#: templates/CRM/Grant/Form/Grant.tpl
-msgid "New Grant"
-msgstr "Toelage toevoegen"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Are you sure you want to delete this Grant?"
@@ -211,6 +205,14 @@ msgstr "Datum waarop het toelagebedrag is overgemaakt."
 #: templates/CRM/Grant/Form/GrantView.tpl
 msgid "(original currency)"
 msgstr "(oorspronkelijke valuta)"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Status(s)"
+msgstr "Toelagestatus(sen)"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Type(s)"
+msgstr "Toelagetype(s)"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
@@ -304,61 +306,17 @@ msgid "This page lists all grants for %1 since inception."
 msgstr "Deze pagina geeft een lijst van alle toelagen van %1 sinds de aanvangsdatum."
 
 #: templates/CRM/Grant/Page/Tab.tpl
-msgid ""
-"Click <a accesskey='N' href='%1'>Add Grant</a> to record a Grant for this "
-"contact."
-msgstr "Klik op <a accesskey='N' href='%1'>Toelage toevoegen</a> om een toelage voor dit contact vast te leggen."
+msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
+msgstr "Klik op <a %1>Toelage toevoegen</a> om een toelage voor dit contact vast te leggen."
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "No grants have been recorded for this contact."
 msgstr "Er zijn geen toelagen vastgelegd voor dit contact."
 
-#: CRM/Grant/Form/Grant.php
-msgid "Applicant"
-msgstr "Aanvrager"
+#: CRM/Grant/Task.php
+msgid "Export grants"
+msgstr ""
 
-#: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1 (Total Selected: %2)"
-msgstr "Gewijzigde toelage(n): %1 (aantal geselecteerd: %2)"
-
-#: templates/CRM/Grant/Page/Tab.tpl
-msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr "Klik op <a %1>Toelage toevoegen</a> om een toelage voor dit contact vast te leggen."
-
-#: CRM/Grant/Form/Task/Delete.php
-msgid "%count grant deleted."
-msgid_plural "%count grants deleted."
-msgstr[0] "%count toelage verwijderd."
-msgstr[1] "%count toelagen verwijderd."
-
-#: CRM/Grant/Info.php
-msgid "access CiviGrant"
-msgstr "toegang tot CiviGrant"
-
-#: CRM/Grant/Info.php
-msgid "View all grants"
-msgstr "Alle toelagen weergeven"
-
-#: CRM/Grant/Info.php
-msgid "edit grants"
-msgstr "toelagen bewerken"
-
-#: CRM/Grant/Info.php
-msgid "Create and update grants"
-msgstr "Toelagen maken en bijwerken"
-
-#: CRM/Grant/Info.php
-msgid "delete in CiviGrant"
-msgstr "verwijderen in CiviGrant"
-
-#: CRM/Grant/Info.php
-msgid "Delete grants"
-msgstr "Toelagen verwijderen"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Status(s)"
-msgstr "Toelagestatus(sen)"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Type(s)"
-msgstr "Toelagetype(s)"
+#: CRM/Grant/Task.php
+msgid "Update grants"
+msgstr ""
